--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=admnapp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database
+spring.datasource.username=root
+spring.datasource.password=G00gle.com
+
+# ... existing database connection properties ...
+
+# Explicitly set the MySQL dialect for Hibernate 6
+# Use MySQL8Dialect if you are on MySQL 8+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# OR if you know you are on MySQL 5.7
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+spring.jpa.hibernate.ddl-auto=create
